hphp/hack/test/typecheck/global_const11.php.exp
File "global_const11.php", line 3, characters 11-18:
Invalid expression in constant initializer (Parsing[1002])
