hphp/hack/test/typecheck/global_const11.php
<?hh // partial

const X = (int)null;
